--- a/login_form/templates/login.html
+++ b/login_form/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <title>Login</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
@@ -16,6 +16,7 @@
   {% endfor %}
   <section class="content">
     <form method="post">
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
       <label for="username">Username</label>
       <input name="username" id="username" required>
       <label for="password">Password</label>
